match3/src/snapshots/match3__tests__sizing__one_gem.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
One gem should fall
Board: 
╭─╮
│r│
│-│
╰─╯
No matches
After Gravity:
╭─╮
│-│
│r│
╰─╯
After Refill:
╭─╮
│#│
│r│
╰─╯
