match3/src/snapshots/match3__tests__sizing__one_gem_on_larger_field.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
One gem should fall on larger field
Board: 
╭──╮
│-r│
│--│
╰──╯
No matches
After Gravity:
╭──╮
│--│
│-r│
╰──╯
After Refill:
╭──╮
│##│
│#r│
╰──╯
