match3/src/snapshots/match3__tests__sizing__should_fall_in_place_after_match.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Gem should fall in place after matching
Board: 
╭───╮
│-r-│
│-g-│
│-g-│
│rgr│
╰───╯
Match #0 - g:
╭───╮
│   │
│ g │
│ g │
│ g │
╰───╯
Remaining cells:
╭───╮
│-r-│
│- -│
│- -│
│r r│
╰───╯
After Gravity:
╭───╮
│- -│
│- -│
│- -│
│rrr│
╰───╯
After Refill:
╭───╮
│###│
│###│
│###│
│rrr│
╰───╯
