match3/src/snapshots/match3__tests__sizing__small_line.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match small line
Board: 
╭────╮
│-rr-│
╰────╯
Match #0 - r:
╭────╮
│ rr │
╰────╯
Remaining cells:
╭────╮
│-  -│
╰────╯
