match3/src/snapshots/match3__tests__sizing__under_group_size.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not match small group under the size requirement
Board: 
╭───╮
│-rr│
│-r-│
╰───╯
No matches
